# Governance-Framework

./: CONTRIBUTING.md  LICENSE  README.md  ci.yml  core.py  governance_keywords.json  mixed_methods.py  municipalities_120_stratified.json  pyproject.toml  requirements.txt  script.py
thesis_repo/: README.md  dvc.yaml  pyproject.toml
thesis_repo/configs/: communes_bavaria.csv  indicators.yml  patterns.yml
thesis_repo/data/processed/: classified_data.csv  indicators.csv
thesis_repo/data/raw/: sample_household_data.csv
thesis_repo/src/: __init__.py  pipeline.py
thesis_repo/src/features/: __init__.py  indicators.py
thesis_repo/src/nlp/: classifier.py
thesis_repo/src/parsing/: __init__.py  parser.py
thesis_repo/src/scraping/: __init__.py  download.py
thesis_repo/tests/: test_classifier.py  test_indicators.py
