[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "municipal-governance-framework"
version = "1.0.0"
authors = [
    {name = "Governance Research Team", email = "governance@research.org"}
]
description = "Mixed-Methods Framework for Municipal Digital Governance Analysis"
readme = "README.md" 
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Sociology :: Digital Government",
]
keywords = ["governance", "digital-government", "nlp", "mixed-methods", "municipalities"]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0", 
    "plotly>=5.0.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "scikit-learn>=1.0.0",
    "transformers>=4.10.0",
    "torch>=1.9.0",
    "spacy>=3.4.0",
    "bertopic>=0.13.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.62.0",
    "openpyxl>=3.0.0",
    "python-dateutil>=2.8.0",
    "scipy>=1.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.15.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0"
]
colab = [
    "streamlit>=1.10.0",
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0"
]
all = [
    "municipal-governance-framework[dev,colab]"
]

[project.urls]
"Homepage" = "https://github.com/governance-research/municipal-governance-framework"
"Bug Reports" = "https://github.com/governance-research/municipal-governance-framework/issues"  
"Source" = "https://github.com/governance-research/municipal-governance-framework"
"Documentation" = "https://governance-research.github.io/municipal-governance-framework"

[project.scripts]
governance = "governance_framework.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"governance_framework" = ["data/*.json", "data/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]  
python_functions = ["test_*"]
addopts = "--cov=governance_framework --cov-report=html --cov-report=term-missing"
